--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.3",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
